--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <h1>God Learning</h1>
     <p>This is the time to learn how to work with repository in Git.</p>
     <br>
+    <ul>Première partie </ul>
+    <ul>Deuxième partie</ul>
+    <ul>Troisème partie</ul>
     <br>
     <h3>Introduction</h3>
     <p>This is again our econd page made to understand the concept</p>
