--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <li>Logistique</li>
         </ul>
     </div>
->>>>>>> filakembo
+    <p> filakembo fut le père biologique de Jean M, originaire de Kibossi d'ou je suis née. Founai Filakembo aime lire <br>
+    Les études pour moi est le seul moyen pour m'occuper je n'arrive pas à passer une journée sans lire. Le vrai cap <br>
+    C'est de tout avoir maîtrisé afin d'élaborer des sites internet pour la gloire de notre Dieu.</p>
     <br>
     <h3>Introduction</h3>
     <p>This is again our econd page made to understand the concept</p>
